tests/NormalTests/paczka1/fuzzy1/84112129.err
Error in line 2: 3h8sStOydhN S425 65,08
Error in line 4: 3h8sStOydhN S425 303,3
Error in line 23: S425 A40 59,5
Error in line 18: GnKlJ A40 34,7
Error in line 32: RbZUlD4xDu S428 48,3
